--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,17 @@ apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 
-/*
-* HELLO! This build script works with Gradle 1.0-milestone-9.
-*/
-
-group = 'com.timgroup'
+group = 'com.youdevise'
 
 def majorVersion = 1
 def minorVersion = 0
-def isReleaseVersion = System.getenv('BUILD_NUMBER') != null
+def isReleaseVersion = true
 // the date formatting is a bit overcomplicated because we need this to work in M3 (for now)
 import java.text.SimpleDateFormat
 def snapshotDateFormat = new SimpleDateFormat('yyyyMMdd-HHmmss')
 snapshotDateFormat.setTimeZone(TimeZone.getTimeZone('UTC'))
-def patchVersion = isReleaseVersion ? System.getenv('BUILD_NUMBER') : snapshotDateFormat.format(new Date())
-def patchSeparator = isReleaseVersion ? '.' : '-'
+def patchVersion = isReleaseVersion ? '' : snapshotDateFormat.format(new Date())
+def patchSeparator = isReleaseVersion ? '' : '-'
 version = "${majorVersion}.${minorVersion}${patchSeparator}${patchVersion}"
 
 jar {
@@ -31,12 +27,8 @@ jar {
     }
 }
 
-repositories {
-    mavenRepo name: 'ydPublic', urls: "${repoUrl}/groups/public"
-}
-
 dependencies {
-    groovy localGroovy()
+    compile localGroovy()
     
     compile gradleApi()
     
@@ -44,14 +36,4 @@ dependencies {
     runtime group: 'me.n4u.sass', name: 'sass-gems', version: '3.1.16'
     
     testCompile group: 'junit', name: 'junit', version: '4.10'
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "${project.repoUrl}/repositories/yd-release-candidates") {
-                authentication(userName: project.repoUsername, password: project.repoPassword)
-            }
-        }
-    }
 }
